force-app/main/default/objects/STARRating_Exemption_Setting__mdt/STARRating_Exemption_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Those settings are used when generating system exemptions</description>
    <label>STARRating Exemption Setting</label>
    <pluralLabel>STARRating Exemption Settings</pluralLabel>
</CustomObject>