force-app/main/default/objects/STARRating_Exemption_Setting__mdt/fields/CER_Exempt_Days__c.field-meta.xml
<CustomField>
    <fullName>CER_Exempt_Days__c</fullName>
    <description>It is used to determine the end date of a CER exemption</description>
    <label>CER Exempt Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>