force-app/main/default/objects/STARRating_Exemption_Setting__mdt/fields/CM_Exempt_Days__c.field-meta.xml
<CustomField>
    <fullName>CM_Exempt_Days__c</fullName>
    <description>It is used to determine the end date of a CM exemption</description>
    <label>CM Exempt Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>