force-app/main/default/objects/STARRating_Exemption_Setting__mdt/fields/QI_Exempt_Days__c.field-meta.xml
<CustomField>
    <fullName>QI_Exempt_Days__c</fullName>
    <description>It is used to determine the end date of a QI exemption</description>
    <label>QI Exempt Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>