force-app/main/default/objects/STARRating_Exemption_Setting__mdt/fields/Rating_Exempt_Days__c.field-meta.xml
<CustomField>
    <fullName>Rating_Exempt_Days__c</fullName>
    <description>It is used to determine if a service is categorised as new or transferred</description>
    <label>Rating Exempt Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>