force-app/main/default/objects/STARRating_Exemption_Setting__mdt/fields/SCR_Exempt_Days__c.field-meta.xml
<CustomField>
    <fullName>SCR_Exempt_Days__c</fullName>
    <description>Interim period for SCR</description>
    <label>SCR Exempt Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>