force-app/main/default/objects/STARRating_Exemption_Setting__mdt/fields/Service_Operational_Days__c.field-meta.xml
<CustomField>
    <fullName>Service_Operational_Days__c</fullName>
    <description>It is used to determine if a service has been operational for 2 full quarters or 180 days</description>
    <label>Service Operational Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>