force-app/main/default/objects/STARRating_Exemption_Setting__mdt/fields/Star_Rating_Live__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating_Live__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if it is star rating go live day.</description>
    <label>Star Rating Live</label>
    <type>Checkbox</type>
</CustomField>